# FlamRD

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgedetection2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetection2/: CameraPreview.kt  MainActivity.kt  NativeLib.kt
app/src/main/java/com/example/edgedetection2/camera/: CameraXController.kt.kt
app/src/main/java/com/example/edgedetection2/gl/: GLRenderer.kt  GLSurfaceViewWrapper.kt
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgedetection2/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json
web/src/: main.ts
